--- a/googleWiki.html
+++ b/googleWiki.html
@@ -7,6 +7,7 @@
  <body>
   <h2>Google</h2>
    <hr>
+   From Wikipedia, the free encyclopedia
   <p>
     This article is about the company. For the search engine, see Google Search. For other uses, see Google (disambiguation).
     Not to be confused with Googol.
