--- a/googleWiki.html
+++ b/googleWiki.html
@@ -9,10 +9,9 @@
    <hr>
    From Wikipedia, the free encyclopedia
   <p>
-    This article is about the company. For the search engine, see Google Search. For other uses, see Google (disambiguation).
+    This article is about the company. For the search engine, see <a href="https://www.google.com/">Google Search</a>. For other uses, see Google (disambiguation).
     Not to be confused with Googol.
  </p>
- <p><a href="https://www.google.com/">Google Search</a></p>
  <p>
     Google LLC[5] is an American multinational technology company that specializes in Internet-related services and products, which include online advertising technologies, search engine, cloud computing, software, and hardware. It is considered one of the Big Four technology companies, alongside Amazon, Apple and Facebook.[6][7]
  </P>
