going to another html from here

--- a/googleWiki.html
+++ b/googleWiki.html
@@ -9,7 +9,11 @@
    <hr>
    From Wikipedia, the free encyclopedia
   <p>
-    This article is about the company. For the search engine, see <a href="https://www.google.com/">Google Search</a>. For other uses, see Google (disambiguation).
+    This article is about the company. For the search engine, see 
+        <a href="https://www.google.com/">
+            Google Search
+        </a>. 
+    For other uses, see Google (disambiguation).
     Not to be confused with Googol.
  </p>
  <p>
