openinng link in new tab

--- a/googleWiki.html
+++ b/googleWiki.html
@@ -10,7 +10,7 @@
    From Wikipedia, the free encyclopedia
   <p>
     This article is about the company. For the search engine, see 
-        <a href="https://www.google.com/">
+        <a href="https://www.google.com/" target="_blank">
             Google Search
         </a>. 
     For other uses, see Google (disambiguation).
