adding bold,italic,underline

--- a/googleWiki.html
+++ b/googleWiki.html
@@ -6,8 +6,8 @@
  </head>
  <body>
   <h2>Google</h2>
-   <hr>
-   From Wikipedia, the free encyclopedia
+  <hr>
+   <a>From Wikipedia, the free encyclopedia</a>
   <p>
     This article is about the company. For the search engine, see 
         <a href="https://www.google.com/" target="_blank">
@@ -28,6 +28,34 @@
  <p>
     Google.com is the most visited website in the world.[9] Several other Google services also figure in the top 100 most visited websites, including YouTube and Blogger. Google was the most valuable brand in the world as of 2017,[10] but has received significant criticism involving issues such as privacy concerns, tax avoidance, antitrust, censorship, and search neutrality. Google's mission statement is "to organize the world's information and make it universally accessible and useful". The company's unofficial slogan "Don't be evil" was removed from the company's code of conduct around May 2018, but reinstated by July 31, 2018.[11][12]
  </P>
+ <p>
+  <b>
+   Google indexes hundreds of terabytes of information from web pages.[12] For websites that are currently down or otherwise not available, Google provides links to cached versions of the site, formed by the search engine's latest indexing of that page.[13] Additionally, Google indexes some file types, being able to show users PDFs, Word documents, Excel spreadsheets, PowerPoint presentations, certain Flash multimedia content, and plain text files.[14] Users can also activate "SafeSearch", a filtering technology aimed at preventing explicit and pornographic content from appearing in search results.[15]
+  </b>
+ </p>
+ <p>
+   <i>
+      Despite Google search's immense index, sources generally assume that Google is only indexing less than 5% of the total Internet, with the rest belonging to the deep web, inaccessible through its search tools.[12][16][17]
 
+    </i>
+ </p>
+ <p>
+   <b> 
+      <i>
+      In 2012, Google changed its search indexing tools to demote sites that had been accused of piracy.[18] In October 2016, Gary Illyes, a webmaster trends analyst with Google, announced that the search engine would be making a separate, primary web index dedicated for mobile devices, with a secondary, less up-to-date index for desktop use. The change was a response to the continued growth in mobile usage, and a push for web developers to adopt a mobile-friendly version of their websites.[19][20] In December 2017, Google began rolling out the change, having already done so for multiple websites.[21]
+      </i>
+    </b>
+  </p>
+  <h3>
+    "Caffeine" search architecture upgrade
+   </h3>
+   <p>
+   <i><b>
+   In <u>
+         August 2009
+       </u>
+    , Google invited web developers to test a new search architecture, codenamed "Caffeine", and give their feedback. The new architecture provided no visual differences in the user interface, but added significant speed improvements and a new "under-the-hood" indexing infrastructure. The move was interpreted in some quarters as a response to Microsoft's recent release of an upgraded version of its own search service, renamed Bing, as well as the launch of Wolfram Alpha, a new search engine based on "computational knowledge".[22][23] Google announced completion of "Caffeine" on June 8, 2010, claiming 50% fresher results due to continuous updating of its index.[24]
+   </i></b>
+   </p>    
  </body>
 </html>
