commenting a html file

--- a/googleWiki.html
+++ b/googleWiki.html
@@ -7,6 +7,7 @@
  <body>
   <h2>Google</h2>
   <hr>
+  <!--so to get line for entire page horizontal you can use <u> use hr<> -->
    <a>From Wikipedia, the free encyclopedia</a>
   <p>
     This article is about the company. For the search engine, see 
