--- a/table.html
+++ b/table.html
@@ -3,7 +3,7 @@
         <title> Table </title>
     </head>
     <body>
-        <table>
+        <table border="1">
             <thead>
                 <tr>
                     <th colspan="3">Invoice #123456789</th>
