added upload file option

--- a/forms.html
+++ b/forms.html
@@ -21,7 +21,7 @@
                 <tr>
                     <td><label>Birthdate * </label></td>
                     <td>
-                        <input type="date" max<"2019-07-11"></input>
+                        <input type="date"></input>
                     </td>
                 </tr>
                 <tr>
@@ -81,6 +81,10 @@
                     </td>
                 </tr>
                 <tr>
+                <tr>
+                    <td><label>upload the resume</td>
+                    <td><input type="file" name="resume"></input></td>
+                </tr>
                     <td></td>
                     <td>(fields marked * are mandatory)</td>
                 </tr>
