added fields to give urls

--- a/forms.html
+++ b/forms.html
@@ -85,6 +85,10 @@
                     <td><label>upload the resume</td>
                     <td><input type="file" name="resume"></input></td>
                 </tr>
+                <tr>
+                    <td><label>Any other websites</label>
+                    <td><input type="url" name="website"></td>
+                </tr>
                     <td></td>
                     <td>(fields marked * are mandatory)</td>
                 </tr>
